--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -1,5 +1,5 @@
 db.url=jdbc:mysql://127.0.0.1:3306/wil?useSSL=false
 db.user=root
 db.password=123
-db.table=tabela_test
+db.table=tabela_test,tabela_test_2,tabela_test_3
 db.log_per_line=100
