feat(multi_threads): Adicionando spliter para otimizar o uso de multi threads

--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -3,3 +3,7 @@ db.user=root
 db.password=123
 db.table=tabela_test,tabela_test_2,tabela_test_3
 db.log_per_line=100
+
+
+#Only used in V2
+db.v2.execution_spliter=3
